# ai-travel-agent

./: .env.example  .gitignore  .python-version  API_REFERENCE.md  CHAOS_ENGINEERING.md  COMPLETE_INVENTORY.md  DOCUMENTATION_INDEX.md  EXAMPLE_SCENARIOS.md  FAILURE_INJECTION_GUIDE.md  FAILURE_INJECTION_QUICK_REFERENCE.md  FAILURE_TRACKING_GUIDE.md  FINAL_DELIVERY.md  INTEGRATION_GUIDE.md  NAVIGATION_GUIDE.md  README.md  README_FAILURE_TRACKING.md  REFERENCE_CARD.md  START_HERE.md  aura_policy.yml  generate_run_dataset.py  pyproject.toml  requirements.txt  run_experiments.py  tets_logs.jsonl
ai_travel_agent/: chaos.py  cli.py  config.py  evaluation.py  graph.py  llm.py
ai_travel_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai_travel_agent/agents/: __init__.py  state.py
docs/: ARCHITECTURE.md  PROMPTS.md  README.md  SETUP.md  TELEMETRY_REPORT.md
examples/: chaos_scenarios.py  failure_tracking_demo.py
scripts/: ablate_signals.py  eda_combined_logs.py  eda_mixed_runs.py  run_mixed_60_single_log.py  run_normal_prompts_baseline.py  run_test_failures_prompts.sh
tests/: test_aura_integration.py  test_brain_planner.py  test_cli_disambiguation.py  test_cli_query_append.py  test_evaluation.py  test_executor_retrieve_context.py  test_failures.py  test_fault_injection.py  test_ics.py  test_intent_parser_core_only.py  test_intent_parser_overrides.py  test_issue_triage.py  test_logging_schema.py  test_metrics.py  test_reasoning_engine.py  test_responder_fallbacks.py  test_telemetry_controller.py  test_validator.py
(+98 files in other folders)
